[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/style/MinimalUI/MinimalUI.tres" type="Theme" id=1]
[ext_resource path="res://scripts/game/Image.gd" type="Script" id=2]

[node name="Pixel That" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -721.0
margin_top = -405.0
margin_right = 719.0
margin_bottom = 405.0
theme = ExtResource( 1 )

[node name="ImageUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Image" type="CenterContainer" parent="ImageUI"]
margin_left = 25.0
margin_top = 285.0
margin_right = 525.0
margin_bottom = 785.0
rect_min_size = Vector2( 500, 500 )
use_top_left = true
script = ExtResource( 2 )
node_image_texture_ = NodePath("Container/Image")
node_image_overlay_ = NodePath("Container/Overlay")
node_image_container_ = NodePath("Container")
node_new_image_timer_ = NodePath("NewImageTimer")
node_new_image_button_ = NodePath("../New Image")
node_search_bar_ = NodePath("../Search")
node_api_selection_ = NodePath("../API")
node_http_request_one_ = NodePath("HTTPRequest")
node_http_request_two_ = NodePath("HTTPRequest2")

[node name="HTTPRequest" type="HTTPRequest" parent="ImageUI/Image"]

[node name="HTTPRequest2" type="HTTPRequest" parent="ImageUI/Image"]

[node name="NewImageTimer" type="Timer" parent="ImageUI/Image"]
one_shot = true

[node name="Container" type="Container" parent="ImageUI/Image"]

[node name="Image" type="TextureRect" parent="ImageUI/Image/Container"]

[node name="Overlay" type="TextureRect" parent="ImageUI/Image/Container"]

[node name="New Image" type="Button" parent="ImageUI"]
margin_left = 539.0
margin_top = 761.0
margin_right = 639.0
margin_bottom = 786.0
text = "New Image"

[node name="Search" type="TextEdit" parent="ImageUI"]
margin_left = 542.0
margin_top = 713.0
margin_right = 809.0
margin_bottom = 751.0
text = "Search..."
highlight_current_line = true
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false

[node name="API" type="OptionButton" parent="ImageUI"]
margin_left = 649.0
margin_top = 761.0
margin_right = 749.0
margin_bottom = 786.0
text = "API"

[node name="Label" type="Label" parent="."]
margin_left = 318.0
margin_top = 24.0
margin_right = 723.0
margin_bottom = 106.0
rect_scale = Vector2( 2, 2 )
text = "Hey there! This is my work in progress full version of Pixel That. You can still access the prototype build at: https://7w1.github.io/Pixel-That-Web/old/index.html"
autowrap = true

[node name="Version" type="Label" parent="."]
margin_left = 1192.0
margin_top = 784.0
margin_right = 1439.0
margin_bottom = 807.0
text = "Pre-Pre-Pre-Pre-Pre-Alpha-0.0.1a"

[node name="api" type="Label" parent="."]
margin_left = 769.0
margin_top = 763.0
margin_right = 888.0
margin_bottom = 786.0
text = "Multiple APIs!?!?"

[connection signal="request_completed" from="ImageUI/Image/HTTPRequest" to="ImageUI/Image" method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="ImageUI/Image/HTTPRequest2" to="ImageUI/Image" method="_on_HTTPRequest2_request_completed"]
[connection signal="timeout" from="ImageUI/Image/NewImageTimer" to="ImageUI/Image" method="_on_NewImageTimer_timeout"]
[connection signal="pressed" from="ImageUI/New Image" to="ImageUI/Image" method="_on_New_Image_pressed"]
